src/tests/parse_errors/015.ura
// parse_errors/015 — function argument missing data type
use "@/header"

fn add(a, b int) int:
    return a + b

main():
    output(add(1, 2), "\n")